--- a/android/app/src/main/res/values-v31/styles.xml
+++ b/android/app/src/main/res/values-v31/styles.xml
@@ -7,7 +7,7 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
         <item name="android:windowSplashScreenBackground">#E7853E</item>
-        <item name="android:windowSplashScreenBrandingImage">@mipmap/launcher_icon</item>
+<!--        <item name="android:windowSplashScreenBrandingImage">@mipmap/launcher_icon</item>-->
         <item name="android:windowSplashScreenAnimatedIcon">@mipmap/launcher_icon</item>
     </style>
     <!-- Theme applied to the Android Window as soon as the process has started.
@@ -21,8 +21,8 @@
     </style>
 
     <style name="SplashTheme" parent="Theme.SplashScreen">
-        <item name="android:windowSplashScreenBackground">#E7853E</item>
+        <item name="android:windowSplashScreenBackground">@android:color/white</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/launcher_icon</item>
-        <item name="android:windowSplashScreenBrandingImage">@mipmap/launcher_icon</item>
+<!--        <item name="android:windowSplashScreenBrandingImage">@mipmap/launcher_icon</item>-->
     </style>
 </resources>
