created Register screen

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,113 +5,145 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".view.LoginActivity">
+    tools:context=".view.RegisterActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="93dp"
         android:fontFamily="@font/samsung_bold"
-        android:text="@string/let_s_sign_nyou_in"
+        android:text="Create \nan account"
         android:textColor="@color/blue_vogue"
-        android:textFontWeight="900"
+        android:textFontWeight="1000"
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/et_email"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="321dp"
+        android:autofillHints="name"
+        android:background="@drawable/et_background"
+        android:drawableEnd="@drawable/baseline_account_circle_24"
+        android:fontFamily="@font/samsung"
+        android:hint="Full Name"
+        android:inputType="textPersonName"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textAllCaps="false"
+        android:textColor="@color/lynch"
+        android:textColorHint="@color/lynch"
+        app:layout_constraintBottom_toTopOf="@+id/tv_sign_up_with"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="231dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="373dp"
-        android:autofillHints="emailAddress"
-        android:hint="@string/email"
-        android:fontFamily="@font/samsung"
+        android:autofillHints="name"
         android:background="@drawable/et_background"
         android:drawableEnd="@drawable/baseline_mail_outline_24"
+        android:fontFamily="@font/samsung"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
+        android:textAllCaps="false"
         android:textColor="@color/lynch"
         android:textColorHint="@color/lynch"
-        app:layout_constraintBottom_toTopOf="@+id/apple"
+        app:layout_constraintBottom_toTopOf="@+id/et_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <EditText
-        android:id="@+id/et_pass"
+        android:id="@+id/et_password"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
-        android:autofillHints="password"
-        android:hint="@string/password"
-        android:fontFamily="@font/samsung"
+        android:layout_marginBottom="250dp"
+        android:autofillHints="name"
         android:background="@drawable/et_background"
         android:drawableEnd="@drawable/baseline_visibility_24"
+        android:fontFamily="@font/samsung"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textAllCaps="false"
         android:textColor="@color/lynch"
         android:textColorHint="@color/lynch"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_email" />
 
-    <TextView
-        android:id="@+id/tv_forgot"
+    <CheckBox
+        android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="404dp"
+        android:layout_marginBottom="202dp"
         android:fontFamily="@font/samsung"
-        android:text="@string/forgot_password"
+        android:text="I have read"
         android:textColor="@color/lynch"
-        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/et_password"
+        app:layout_constraintTop_toBottomOf="@+id/et_name"
+        app:layout_constraintVertical_bias="0.947" />
+
+    <TextView
+        android:id="@+id/terms"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:fontFamily="@font/samsung"
+        android:text="Terms and Agreement"
+        android:textColor="@color/lynch"
+        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox"
+        app:layout_constraintStart_toEndOf="@+id/checkBox" />
 
     <Button
-        android:id="@+id/btn_sign_in"
-        android:layout_width="0dp"
+        android:id="@+id/btn_register"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="157dp"
+        android:layout_marginBottom="112dp"
         android:background="@drawable/btn_primary_background"
         android:fontFamily="@font/samsung"
-        android:text="@string/sign_in"
+        android:text="Sign up"
         android:textSize="14sp"
-        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
-        app:layout_constraintVertical_bias="0.968" />
+        app:layout_constraintTop_toBottomOf="@+id/et_name"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/tv_sign_in_with"
+        android:id="@+id/tv_sign_up_with"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="101dp"
+        android:layout_marginBottom="81dp"
         android:fontFamily="@font/samsung"
-        android:text="@string/or_sign_in_with"
+        android:text="Or sign up with"
         android:textColor="@color/lynch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
-        app:layout_constraintVertical_bias="0.946" />
+        app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <Button
         android:id="@+id/google"
@@ -119,18 +151,19 @@
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="24dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="0dp"
         android:background="@drawable/btn_secondary_background"
         android:drawableStart="@drawable/googleg_standard_color_18"
-        android:text="@string/google"
-        android:textColor="@color/lynch"
-        android:textAllCaps="false"
         android:fontFamily="@font/samsung"
+        android:paddingStart="10dp"
+        android:paddingEnd="0dp"
+        android:text="@string/google"
+        android:textAllCaps="false"
+        android:textColor="@color/lynch"
         app:layout_constraintBottom_toBottomOf="@+id/apple"
         app:layout_constraintEnd_toStartOf="@+id/apple"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/apple" />
+        app:layout_constraintTop_toTopOf="@+id/apple"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/apple"
@@ -140,14 +173,17 @@
         android:layout_marginBottom="6dp"
         android:background="@drawable/btn_secondary_background"
         android:drawableStart="@drawable/googleg_standard_color_18"
-        android:text="@string/apple"
-        android:textColor="@color/lynch"
+        android:fontFamily="@font/samsung"
         android:paddingStart="10dp"
         android:paddingEnd="0dp"
+        android:text="@string/apple"
         android:textAllCaps="false"
-        android:fontFamily="@font/samsung"
+        android:textColor="@color/lynch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/google"
-        app:layout_constraintTop_toBottomOf="@+id/et_email" />
+        app:layout_constraintTop_toBottomOf="@+id/et_email"
+        app:layout_constraintVertical_bias="0.965" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
