used an onboarding model to populate the data

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,149 +5,267 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".view.LoginActivity">
+    tools:context=".view.LoginActivity"
+    tools:layout_editor_absoluteX="3dp"
+    tools:layout_editor_absoluteY="2dp">
+
+
+    <LinearLayout
+        android:id="@+id/linear_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvCooking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:fontFamily="@font/samsung"
+        android:text="we\'ll do the cooking"
+        android:textColor="@color/txt_black"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_no_account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/samsung"
+        android:text="If you don\'t have an\naccount please"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_sign_up"
+        app:layout_constraintStart_toStartOf="@+id/tvCooking"
+        app:layout_constraintTop_toTopOf="@+id/tv_sign_up" />
+
+    <TextView
+        android:id="@+id/tv_sign_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="49dp"
+        android:fontFamily="@font/samsung"
+        android:text="Sign up here"
+        android:textColor="@color/txt_red"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/tvCooking"
+        app:layout_constraintTop_toBottomOf="@+id/tvCooking" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginBottom="44dp"
-        android:fontFamily="@font/samsung_bold"
-        android:text="@string/let_s_sign_nyou_in"
-        android:textColor="@color/blue_vogue"
-        android:textFontWeight="900"
-        android:textSize="32sp"
+        android:fontFamily="@font/samsung"
+        android:text="Sign In"
+        android:textColor="@color/txt_red"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tvCooking"
+        app:layout_constraintStart_toEndOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginBottom="209dp"
+        android:fontFamily="@font/samsung"
+        android:text="Just "
+        android:textColor="@color/txt_black"
+        android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/et_email"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/tv_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="92dp"
+        android:fontFamily="@font/samsung"
+        android:text="Email Address"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_no_account" />
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="231dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="373dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
         android:autofillHints="emailAddress"
-        android:hint="@string/email"
-        android:fontFamily="@font/samsung"
         android:background="@drawable/et_background"
-        android:drawableEnd="@drawable/baseline_mail_outline_24"
+        android:drawableEnd="@drawable/check"
+        android:fontFamily="@font/samsung"
+        android:hint="abel@domain.com"
         android:inputType="textEmailAddress"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:textColor="@color/lynch"
-        android:textColorHint="@color/lynch"
-        app:layout_constraintBottom_toTopOf="@+id/apple"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/et_pass"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="24dp"
-        android:autofillHints="password"
-        android:hint="@string/password"
-        android:fontFamily="@font/samsung"
-        android:background="@drawable/et_background"
-        android:drawableEnd="@drawable/baseline_visibility_24"
-        android:inputType="textPassword"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:textColor="@color/lynch"
-        android:textColorHint="@color/lynch"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:textColor="@color/txt_black"
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintBottom_toTopOf="@+id/tv_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/tv_forgot"
+        android:id="@+id/tv_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="404dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="464dp"
         android:fontFamily="@font/samsung"
-        android:text="@string/forgot_password"
-        android:textColor="@color/lynch"
-        android:textSize="12sp"
+        android:text="Password"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_email" />
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="96dp"
+        android:autofillHints="password"
+        android:background="@drawable/et_background"
+        android:fontFamily="@font/samsung"
+        android:hint="**********"
+        android:inputType="textPassword"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textColor="@color/txt_black"
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/et_email"
+        app:layout_constraintVertical_bias="0.141" />
+
+    <ImageView
+        android:id="@+id/show_pass_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="20dp"
+        android:alpha=".5"
+        android:contentDescription="password"
+        android:src="@drawable/baseline_visibility_24"
+        app:layout_constraintEnd_toEndOf="@+id/et_password"
+        app:layout_constraintTop_toTopOf="@+id/et_password" />
+
+    <TextView
+        android:id="@+id/tv_forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/samsung"
+        android:text="Forgot Password?"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
     <Button
         android:id="@+id/btn_sign_in"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="157dp"
-        android:background="@drawable/btn_primary_background"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="54dp"
+        android:background="@drawable/btn_background_red"
         android:fontFamily="@font/samsung"
-        android:text="@string/sign_in"
-        android:textSize="14sp"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
-        app:layout_constraintVertical_bias="0.968" />
+        android:text="Sign in"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_fb"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tv_sign_in_with"
+        android:id="@+id/tv_or"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="101dp"
+        android:layout_marginBottom="87dp"
         android:fontFamily="@font/samsung"
-        android:text="@string/or_sign_in_with"
-        android:textColor="@color/lynch"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Or"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btn_google"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
-        app:layout_constraintVertical_bias="0.946" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/google"
+        android:id="@+id/btn_fb"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="24dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="0dp"
-        android:background="@drawable/btn_secondary_background"
-        android:drawableStart="@drawable/googleg_standard_color_18"
-        android:text="@string/google"
-        android:textColor="@color/lynch"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="19dp"
+        android:background="@drawable/btn_background_outline"
+        android:drawableStart="@drawable/facebook"
+        android:fontFamily="@font/samsung_bold"
+        android:gravity="center"
+        android:paddingStart="50dp"
+        android:paddingEnd="50dp"
+        android:text="Connect with facebook"
+        android:textAlignment="center"
         android:textAllCaps="false"
-        android:fontFamily="@font/samsung"
-        app:layout_constraintBottom_toBottomOf="@+id/apple"
-        app:layout_constraintEnd_toStartOf="@+id/apple"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_google"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/apple" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_or" />
 
     <Button
-        android:id="@+id/apple"
+        android:id="@+id/btn_google"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="6dp"
-        android:background="@drawable/btn_secondary_background"
-        android:drawableStart="@drawable/googleg_standard_color_18"
-        android:text="@string/apple"
-        android:textColor="@color/lynch"
-        android:paddingStart="10dp"
-        android:paddingEnd="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/btn_background_outline"
+        android:drawableStart="@drawable/google"
+        android:fontFamily="@font/samsung_bold"
+        android:gravity="center"
+        android:paddingStart="60dp"
+        android:paddingEnd="60dp"
+        android:text="Connect with Google"
+        android:textAlignment="center"
         android:textAllCaps="false"
-        android:fontFamily="@font/samsung"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/google"
-        app:layout_constraintTop_toBottomOf="@+id/et_email" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
