--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,186 +7,310 @@
     android:background="@color/white"
     tools:context=".view.RegisterActivity">
 
+
     <TextView
-        android:id="@+id/tv_create"
+        android:id="@+id/tv_let"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="93dp"
-        android:fontFamily="@font/samsung_bold"
-        android:text="Create \nan account"
-        android:textColor="@color/blue_vogue"
-        android:textFontWeight="1000"
-        android:textSize="32sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="43dp"
+        android:fontFamily="@font/samsung"
+        android:text="Let\'s"
+        android:textColor="@color/txt_black"
+        android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_sign_you_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginBottom="3dp"
+        android:fontFamily="@font/samsung"
+        android:text="Sign You up"
+        android:textColor="@color/txt_red"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tv_your"
+        app:layout_constraintStart_toEndOf="@+id/tv_let" />
+
+    <TextView
+        android:id="@+id/tv_your"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:fontFamily="@font/samsung"
+        android:text="your meal awaits"
+        android:textColor="@color/txt_black"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/tv_let"
+        app:layout_constraintTop_toBottomOf="@+id/tv_let" />
+
+    <TextView
+        android:id="@+id/tv_account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/samsung"
+        android:text="If you have an\naccount please"
+        android:textColor="@color/et_grey"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_sign_in"
+        app:layout_constraintStart_toStartOf="@+id/tv_your"
+        app:layout_constraintTop_toTopOf="@+id/tv_sign_in" />
+
+    <TextView
+        android:id="@+id/tv_sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/samsung"
+        android:text="Sign In here"
+        android:textColor="@color/txt_red"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/tv_account"
+        app:layout_constraintTop_toBottomOf="@+id/tv_your" />
+
+    <TextView
+        android:id="@+id/tv_full_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="21dp"
+        android:fontFamily="@font/samsung"
+        android:text="Full name"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_account" />
+
     <EditText
-        android:id="@+id/et_name"
+        android:id="@+id/et_full_name"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="321dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="36dp"
         android:autofillHints="name"
         android:background="@drawable/et_background"
-        android:drawableEnd="@drawable/baseline_account_circle_24"
+        android:drawableEnd="@drawable/check"
         android:fontFamily="@font/samsung"
-        android:hint="Full Name"
+        android:hint="abel"
         android:inputType="textPersonName"
         android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:textAllCaps="false"
-        android:textColor="@color/lynch"
-        android:textColorHint="@color/lynch"
-        app:layout_constraintBottom_toTopOf="@+id/tv_sign_up_with"
+        android:paddingEnd="10dp"
+        android:textColor="@color/txt_black"
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_email_address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="331dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="389dp"
-        android:autofillHints="name"
-        android:background="@drawable/et_background"
-        android:drawableEnd="@drawable/baseline_mail_outline_24"
-        android:fontFamily="@font/samsung"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:textAllCaps="false"
-        android:textColor="@color/lynch"
-        android:textColorHint="@color/lynch"
-        app:layout_constraintBottom_toTopOf="@+id/google"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="250dp"
-        android:autofillHints="name"
-        android:background="@drawable/et_background"
-        android:drawableEnd="@drawable/baseline_visibility_24"
-        android:fontFamily="@font/samsung"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:textAllCaps="false"
-        android:textColor="@color/lynch"
-        android:textColorHint="@color/lynch"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
-        app:layout_constraintVertical_bias="0.146" />
-
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="312dp"
-        android:fontFamily="@font/samsung"
-        android:text="I have read"
-        android:textColor="@color/lynch"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/et_password" />
+        app:layout_constraintTop_toTopOf="@+id/tv_full_name" />
 
     <TextView
-        android:id="@+id/terms"
+        android:id="@+id/tv_email_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="12dp"
         android:fontFamily="@font/samsung"
-        android:text="Terms and Agreement"
-        android:textColor="@color/lynch"
-        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox"
-        app:layout_constraintStart_toEndOf="@+id/checkBox" />
+        android:text="Email Address"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/et_email_address"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/et_email_address"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="237dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="237dp"
+        android:autofillHints="emailAddress"
+        android:background="@drawable/et_background"
+        android:drawableEnd="@drawable/check"
+        android:fontFamily="@font/samsung"
+        android:hint="abel@domain.com"
+        android:inputType="textEmailAddress"
+        android:paddingStart="20dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/txt_black"
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintBottom_toBottomOf="@+id/ll_terms"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_your" />
+
+    <TextView
+        android:id="@+id/tv_password_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="11dp"
+        android:fontFamily="@font/samsung"
+        android:text="Password"
+        android:textColor="@color/txt_black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_email_address" />
+
+
+    <EditText
+        android:id="@+id/et_pass"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="99dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="97dp"
+        android:autofillHints="password"
+        android:background="@drawable/et_background"
+        android:hint="*******"
+        android:inputType="textPassword"
+        android:paddingStart="20dp"
+        android:textColor="@color/txt_black"
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintBottom_toTopOf="@+id/tv_by"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/et_email_address" />
+
+    <ImageView
+        android:id="@+id/show_pass_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="12dp"
+        android:alpha=".5"
+        android:contentDescription="password"
+        android:src="@drawable/baseline_visibility_24"
+        app:layout_constraintBottom_toBottomOf="@+id/et_pass"
+        app:layout_constraintEnd_toEndOf="@+id/et_pass" />
 
     <Button
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="112dp"
-        android:background="@drawable/btn_primary_background"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="76dp"
+        android:background="@drawable/btn_background_red"
         android:fontFamily="@font/samsung"
         android:text="Sign up"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_connect"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_name"
-        app:layout_constraintVertical_bias="0.939" />
+        app:layout_constraintTop_toTopOf="@+id/et_pass" />
 
     <TextView
-        android:id="@+id/tv_sign_up_with"
+        android:id="@+id/tv_by"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="424dp"
+        android:layout_marginBottom="33dp"
         android:fontFamily="@font/samsung"
-        android:text="Or sign up with"
-        android:textColor="@color/lynch"
+        android:text="By signing up, you have agreed to our"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_connect"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_name" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/google"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="21dp"
-        android:background="@drawable/btn_secondary_background"
-        android:drawableStart="@drawable/googleg_standard_color_18"
-        android:fontFamily="@font/samsung"
-        android:paddingStart="10dp"
-        android:paddingEnd="0dp"
-        android:text="@string/google"
-        android:textAllCaps="false"
-        android:textColor="@color/lynch"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/apple"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
-        app:layout_constraintVertical_bias="1.0" />
+    <LinearLayout
+        android:id="@+id/ll_terms"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toStartOf="@+id/tv_by"
+        app:layout_constraintTop_toBottomOf="@+id/tv_by">
 
-    <Button
-        android:id="@+id/apple"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="6dp"
-        android:background="@drawable/btn_secondary_background"
-        android:drawableStart="@drawable/googleg_standard_color_18"
+        <TextView
+            android:id="@+id/tv_terms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/samsung"
+            android:text="Terms and Conditions"
+            android:textColor="@android:color/holo_blue_dark" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/samsung"
+            android:text=" &amp;"
+            android:textColor="@android:color/darker_gray" />
+
+        <TextView
+            android:id="@+id/tv_policy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/samsung"
+            android:text=" Privacy Policy"
+            android:textColor="@android:color/holo_blue_dark" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_connect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/samsung"
-        android:paddingStart="10dp"
-        android:paddingEnd="0dp"
-        android:text="@string/apple"
-        android:textAllCaps="false"
-        android:textColor="@color/lynch"
+        android:text="Or Connect with"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="27dp"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/google"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
-        app:layout_constraintVertical_bias="0.965" />
+        app:layout_constraintStart_toStartOf="parent">
 
+        <Button
+            android:id="@+id/btn_fb"
+            android:layout_width="152dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/btn_background_outline"
+            android:drawableStart="@drawable/facebook"
+            android:fontFamily="@font/samsung"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:text="Facebook"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/txt_black"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btn_google"
+            android:layout_width="152dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/btn_background_outline"
+            android:drawableStart="@drawable/google"
+            android:fontFamily="@font/samsung"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:text="Google"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/txt_black"
+            android:textSize="16sp" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
