--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,16 +5,16 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Eatsplorer" parent="Base.Theme.Eatsplorer" />
-    <style name="Theme.Eatsplorer.Fullscreen" parent="Theme.Eatsplorer">
-        <item name="android:actionBarStyle">@style/Widget.Theme.Eatsplorer.ActionBar.Fullscreen
-        </item>
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="android:windowBackground">@null</item>
-    </style>
+<!--    <style name="Theme.Eatsplorer" parent="Base.Theme.Eatsplorer" />-->
+<!--    <style name="Theme.Eatsplorer.Fullscreen" parent="Theme.Eatsplorer">-->
+<!--        <item name="android:actionBarStyle">@style/Widget.Theme.Eatsplorer.ActionBar.Fullscreen-->
+<!--        </item>-->
+<!--        <item name="android:windowActionBarOverlay">true</item>-->
+<!--        <item name="android:windowBackground">@null</item>-->
+<!--    </style>-->
 
-    <style name="ThemeOverlay.Eatsplorer.FullscreenContainer" parent="">
-        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
-        <item name="fullscreenTextColor">@color/light_blue_A200</item>
-    </style>
+<!--    <style name="ThemeOverlay.Eatsplorer.FullscreenContainer" parent="">-->
+<!--        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>-->
+<!--        <item name="fullscreenTextColor">@color/light_blue_A200</item>-->
+<!--    </style>-->
 </resources>
