--- a/app/src/main/res/drawable/btn_background_red.xml
+++ b/app/src/main/res/drawable/btn_background_red.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <corners android:radius="10dp"/>
-    <solid android:color="@color/txt_red" />
+    <solid android:color="@color/red_ribbon" />
 
 </shape>
