--- a/app/src/main/res/layout/onboarding_item.xml
+++ b/app/src/main/res/layout/onboarding_item.xml
@@ -25,7 +25,7 @@
         android:fontFamily="@font/samsung"
         android:text="Satisfy your cravings"
         android:textAlignment="center"
-        android:textColor="@color/txt_black"
+        android:textColor="@color/blue_vogue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
             android:layout_marginTop="1dp"
             android:fontFamily="@font/samsung"
             android:text="ease"
-            android:textColor="@color/txt_red"
+            android:textColor="@color/red_ribbon"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -76,7 +76,7 @@
         android:fontFamily="@font/samsung"
         android:text="Integer a viverra sit feugiat leo\ncommodo nunc."
         android:textAlignment="gravity"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/lynch"
         app:layout_constraintStart_toStartOf="@+id/tv_onboarding_title"
         app:layout_constraintTop_toBottomOf="@+id/ll_colored" />
 
