--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,8 +4,8 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
-<!--    <style name="ThemeOverlay.Eatsplorer.FullscreenContainer" parent="">-->
-<!--        <item name="fullscreenBackgroundColor">@color/light_blue_900</item>-->
-<!--        <item name="fullscreenTextColor">@color/light_blue_A400</item>-->
-<!--    </style>-->
+    <style name="Theme.Eatsplorer" parent="Base.Theme.Eatsplorer">
+        <item name="android:fontFamily">@font/samsung</item>
+        <item name="font">@font/samsung_bold</item>
+    </style>
 </resources>
