--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="84dp"
         android:fontFamily="@font/samsung"
         android:text="we\'ll do the cooking"
-        android:textColor="@color/txt_black"
+        android:textColor="@color/blue_vogue"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -81,7 +81,7 @@
         android:layout_marginBottom="209dp"
         android:fontFamily="@font/samsung"
         android:text="Just "
-        android:textColor="@color/txt_black"
+        android:textColor="@color/blue_vogue"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/et_email"
@@ -97,7 +97,7 @@
         android:layout_marginTop="92dp"
         android:fontFamily="@font/samsung"
         android:text="Email Address"
-        android:textColor="@color/txt_black"
+        android:textColor="@color/blue_vogue"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +134,7 @@
         android:layout_marginBottom="464dp"
         android:fontFamily="@font/samsung"
         android:text="Password"
-        android:textColor="@color/txt_black"
+        android:textColor="@color/blue_vogue"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
